Break links in prose to avoid overflow

--- a/src/styles/prose-styles.css
+++ b/src/styles/prose-styles.css
@@ -11,7 +11,7 @@
 }
 
 .prose a {
-  @apply px-0.5 -mx-0.5 font-medium no-underline bg-yellow-400 rounded-sm dark:bg-gray-100 dark:bg-opacity-20 text-gray-1000 dark:text-gray-300 bg-opacity-20 md:hover:bg-opacity-30 md:dark:hover:bg-yellow-500 md:dark:hover:bg-opacity-100 md:dark:hover:text-gray-1000;
+  @apply px-0.5 -mx-0.5 font-medium no-underline bg-yellow-400 rounded-sm dark:bg-gray-100 dark:bg-opacity-20 text-gray-1000 dark:text-gray-300 bg-opacity-20 md:hover:bg-opacity-30 md:dark:hover:bg-yellow-500 md:dark:hover:bg-opacity-100 md:dark:hover:text-gray-1000 break-words;
 }
 
 .prose a code {
